deploymenet.yaml
apiVersion: v1
kind: Pod
metadata:
 name: helloworld-app
 labels:
  app: helloworld-app
spec:
 containers:
  - name: helloworld-app
    image: pierrezemb/gostatic
    args: ["-enable-health"]
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 8043
