ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellworld-ingress
  annotations:
    ngress.kubernetes.io/rewrite-target: /
spec:
  rules:
     - host: hellworld.info
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellworld-app
                port:
                  number: 8043
